# QQL

./: .gitignore  CMakeLists.txt  README.md  qql.py  run.sh
src/: main.cpp
tests/: example.qql
